feat: add tox and flake 8

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,5 +9,13 @@ norecursedirs =
     .vscode
     migrations
     venv
+    .tox,
+    doc,
+    *openstack/common/*,
+    *lib/python*,
+    *egg,
+    build,
+    tools/xenserver*,
+    releasenotes
 markers =
     delay: require delay to test (deselect with '-m "not delay"')
