--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
 line-length = 89
-target-version = ['py38']
+target-version = ['py310']
 include = '\.pyi?$'
 exclude =  '''
 /(
@@ -17,5 +17,6 @@ exclude =  '''
     | build
     | dist
     | venv
+    | migrations
 )/
 '''
