--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,13 @@
 repos:
+  - repo: local
+    hooks:
+    - id: commit-msg
+      name: commit-msg
+      entry: ./.hooks/commit-msg.py
+      language: python
+      stages:
+        - commit-msg
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
