--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,21 @@
 [tox]
-envlist = py310
+envlist = py38
 
 [testenv]
-deps =
-    black
-    flake8
-    pydocstyle
-    pytest
-    pytest-clarity
-    pytest-dotenv
-    pytest-flask
+deps = .[dev]
 
+setenv =
+    PYTHONPATH = {toxinidir}
+    FLASK_APP=run.py
+    FLASK_ENV = development
+    SECRET_KEY = "secret"
+    DB_USER = "postgres"
+    DB_PASSWORD = "password"
+    DB_HOST = "localhost"
+    DB_PORT = "5432"
+    DB_NAME = "main"
+    
 commands =
-    - black {posargs: --check .} 
-    - flake8
-    - pytest 
+    black {posargs: --check .} 
+    flake8
+    pytest
