--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -14,12 +14,17 @@ jobs:
         uses: actions/setup-python@v4.3.0
         with:
           python-version: "3.8"
-      - name: Load cache (if exists)
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
+      - name: pip cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip
-          restore-keys: ${{ runner.os }}-pip
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/setup.py') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install Dependancies
         run: |
           python -m pip install --upgrade pip setuptools wheel
