--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   lint-test:
     name: Test and lint
-    uses: ahmedemad242/Flask-JWT-Authentication/.github/workflows/development.yml@main
+    uses: ./.github/workflows/development.yaml
 
   build-push:
     name: Build and push
@@ -31,7 +31,7 @@ jobs:
 
       - name: Extract tag
         shell: bash
-        run: echo "##[set-output name=release_tag;]$(echo ${GITHUB_REF#refs/tags/})"
+        run: echo "release_tag=$(echo ${GITHUB_REF#refs/tags/})" >> $GITHUB_OUTPUT
         id: extract_tag
 
       - name: Build, tag, and push image to amazon ECR
